--- a/index.html
+++ b/index.html
@@ -4,47 +4,66 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> HANGMAN </title>
-  </head>
-  <body>
-    <header>
-      <h1>HANGMAN</h1>
-      <button>Theme</button>
-    </header>
-    <main class="muñeco">
-      <img src="5e9d98460ac2570004498cca.png" alt="">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+      />
+      <title> HANGMAN </title>
+    </head>
+    <body>
+      <header>
+        <h1>HANGMAN</h1>
+        <button>Theme</button>
+      </header>
+      <main class="muñeco">
+        <div class="acierto invisible" >ACIERTO!</div>
+        
+        <img src="muñeco0.png" alt="">
     </main>
     <aside class="palabra">
-      <span class="aElegir"></span>
+      <span class="adivinar"></span>
     </aside>
-    <d class="teclado">
-      <div>a</div>
-      <div>b</div>
-      <div>c</div>
-      <div>d</div>
-      <div>e</div>
-      <div>f</div>
-      <div>g</div>
-      <div>h</div>
-      <div>i</div>
-      <div>j</div>
-      <div>k</div>
-      <div>l</div>
-      <div>m</div>
-      <div>n</div>
-      <div>o</div>
-      <div>p</div>
-      <div>q</div>
-      <div>r</div>
-      <div>s</div>
-      <div>t</div>
-      <div>u</div>
-      <div>v</div>
-      <div>w</div>
-      <div>x</div>
-      <div>y</div>
-      <div>z</div>
-  </div>
+    <section class="teclado">
+
+      <section class="cajaPerdedora invisible">
+        <section class="perdiste" >PERDISTE👎</section>
+        <button class="reset">Play Again</button>
+      </section>
+      <section class="cajaGanadora invisible">
+        <section class="ganaste" >GANASTE!🥳</section>
+        <button class="reset">Play Again</button>
+      </section>
+
+      <div class="letra">A</div>
+      <div class="letra">B</div>
+      <div class="letra">C</div>
+      <div class="letra">D</div>
+      <div class="letra">E</div>
+      <div class="letra">F</div>
+      <div class="letra">G</div>
+      <div class="letra">H</div>
+      <div class="letra">I</div>
+      <div class="letra">J</div>
+      <div class="letra">K</div>
+      <div class="letra">L</div>
+      <div class="letra">M</div>
+      <div class="letra">N</div>
+      <div class="letra">Ñ</div>
+      <div class="letra">O</div>
+      <div class="letra">P</div>
+      <div class="letra">Q</div>
+      <div class="letra">R</div>
+      <div class="letra">S</div>
+      <div class="letra">T</div>
+      <div class="letra">U</div>
+      <div class="letra">V</div>
+      <div class="letra">W</div>
+      <div class="letra">X</div>
+      <div class="letra">Y</div>
+      <div class="letra">Z</div>
+  </section>
       
     <script src="script.js"></script>
   </body>
