--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
       <section class="cajaPerdedora invisible">
         <section class="perdiste" >PERDISTE👎</section>
-        <button class="reset">Play Again</button>
+        <button class="reset2">Play Again</button>
       </section>
       <section class="cajaGanadora invisible">
         <section class="ganaste" >GANASTE!🥳</section>
-        <button class="reset">Play Again</button>
+        <button class="reset1">Play Again</button>
       </section>
 
       <div class="letra">A</div>
