--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" class="change-color" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,8 +18,6 @@
         <button>Theme</button>
       </header>
       <main class="muñeco">
-        <div class="acierto invisible" >ACIERTO!</div>
-        
         <img src="muñeco0.png" alt="">
     </main>
     <aside class="palabra">
